--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <h1 align="center">Мой сайт</h1>
             <details class="details">
                 <summary class="details-title">Домашние задания</summary>
-                <p align="center"><a href="home04/">04.02</a></p>
-                <p align="center"><a href="lession05/">05.02</a></p>
+                <p align="center"><a href="home04/04.12.2025.html">04.02</a></p>
+                <p align="center"><a href="lession05/05.02.2025.html">05.02</a></p>
                 <p align="center"><a href="12.hom/12hom.html">12.02</a></p>
             </details>
             <details class="details">
