--- a/home04/04.12.2025.html
+++ b/home04/04.12.2025.html
@@ -8,21 +8,21 @@
 <body>
     <h1 id="top">04.02.2025</h1>
     <ul>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/2%20урок/№1.html">Задание 1 </a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/2%20урок/№2.html">Задание 2 </a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/2%20урок/№3.html">Задание 3</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/2%20урок/№4.html">Задание 4</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/2%20урок/№5.html">Задание 5</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/2%20урок/№6.html">Задание 6</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/2%20урок/№7.html">Задание 7</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/2%20урок/№8.html">Задание 8</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/2%20урок/№9.html">Задание 9</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/2%20урок/№10.html">Задание 10</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/2%20урок/№11.html">Задание 11</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/2%20урок/№12.html">Задание 12</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/2%20урок/№13.html">Задание 13</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/2%20урок/№14.html">Задание 14</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/2%20урок/№15.html">Задание 15</a></li>
+        <li><a href="№1.html">Задание 1 </a></li>
+        <li><a href="№2.html">Задание 2 </a></li>
+        <li><a href="№3.html">Задание 3</a></li>
+        <li><a href="№4.html">Задание 4</a></li>
+        <li><a href="№5.html">Задание 5</a></li>
+        <li><a href="№6.html">Задание 6</a></li>
+        <li><a href="№7.html">Задание 7</a></li>
+        <li><a href="№8.html">Задание 8</a></li>
+        <li><a href="№9.html">Задание 9</a></li>
+        <li><a href="№10.html">Задание 10</a></li>
+        <li><a href="№11.html">Задание 11</a></li>
+        <li><a href="№12.html">Задание 12</a></li>
+        <li><a href="№13.html">Задание 13</a></li>
+        <li><a href="№14.html">Задание 14</a></li>
+        <li><a href="№15.html">Задание 15</a></li>
     </ul>
 </body>
 </html>
