--- a/home04/04.12.2025.html
+++ b/home04/04.12.2025.html
@@ -4,25 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {background-image: url(fon.jpg);
+        background-repeat: no-repeat;}
+    </style>
 </head>
 <body>
-    <h1 id="top">04.02.2025</h1>
-    <ul>
-        <li><a href="№1.html">Задание 1 </a></li>
-        <li><a href="№2.html">Задание 2 </a></li>
-        <li><a href="№3.html">Задание 3</a></li>
-        <li><a href="№4.html">Задание 4</a></li>
-        <li><a href="№5.html">Задание 5</a></li>
-        <li><a href="№6.html">Задание 6</a></li>
-        <li><a href="№7.html">Задание 7</a></li>
-        <li><a href="№8.html">Задание 8</a></li>
-        <li><a href="№9.html">Задание 9</a></li>
-        <li><a href="№10.html">Задание 10</a></li>
-        <li><a href="№11.html">Задание 11</a></li>
-        <li><a href="№12.html">Задание 12</a></li>
-        <li><a href="№13.html">Задание 13</a></li>
-        <li><a href="№14.html">Задание 14</a></li>
-        <li><a href="№15.html">Задание 15</a></li>
-    </ul>
+    <style>
+        .content-box{ 
+        padding: 70px;
+        color: #fff;
+        font-size: 30px;
+        text-transform: uppercase;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        background: rgba(255, 255, 255, 0,2);
+        border-radius: 16px;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0,1);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border: 1px solid rgba(255, 255, 255, 0,3);
+    }
+    .details {
+        position: relative;
+        display: block;
+        max-width: 650px;
+        max-height: 500px;
+        margin: 0 auto 10px;
+        background: rgba(255, 255, 255, 0.251);
+        border-radius: 5px;
+        transition: 0.7s;
+        overflow: hidden;
+      }
+    </style>
+        <div class="content-box">
+    <h1 id="top" align="center">04.02.2025</h1>
+        <p align="center"><a href="№1.html">Задание 1 </a></p>
+        <p align="center"><a href="№2.html">Задание 2 </a></p>
+        <p align="center"><a href="№3.html">Задание 3</a></p>
+        <p align="center"><a href="№4.html">Задание 4</a></p>
+        <p align="center"><a href="№5.html">Задание 5</a></p>
+        <p align="center"><a href="№6.html">Задание 6</a></p>
+        <p align="center"><a href="№7.html">Задание 7</a></p>
+        <p align="center"><a href="№8.html">Задание 8</a></p>
+        <p align="center"><a href="№9.html">Задание 9</a></p>
+        <p align="center"><a href="№10.html">Задание 10</a></p>
+        <p align="center"><a href="№11.html">Задание 11</a></p>
+        <p align="center"><a href="№12.html">Задание 12</a></p>
+        <p align="center"><a href="№13.html">Задание 13</a></p>
+        <p align="center"><a href="№14.html">Задание 14</a></p>
+        <p align="center"><a href="№15.html">Задание 15</a></p>
 </body>
 </html>
