--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </details>
             <details class="details">
                 <summary class="details-title">My GitHub</summary>
-                <a href="https://github.com/Vitaliy2008" align="center">My github</a>
+                <p align="center"><a href="https://github.com/Vitaliy2008">My github</a></p>
             </details>
             <details class="details">
                 <summary class="details-title">Море</summary>
