--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <p align="center"><a href="home04/04.12.2025.html">04.02</a></p>
                 <p align="center"><a href="lession05/05.02.2025.html">05.02</a></p>
                 <p align="center"><a href="12.hom/12hom.html">12.02</a></p>
+                <p align="center"><a href="24.hom/index.html">24.02</a></p>
             </details>
             <details class="details">
                 <summary class="details-title">Lorem</summary>
