--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Виталий Пензарь</title>
     <link href="style.css" rel="stylesheet">
-    <link rel="website icon" type="svg" href="B.svg">
+    <link href="B.svg" rel="website icon" type="svg" >
 </head>
 <body style="-webkit-text-fill-color: black;">
     <section>
