--- a/24.hom/index.html
+++ b/24.hom/index.html
@@ -57,7 +57,7 @@
     </div>
     <br>
     <div style="width: 700px; margin-left: auto; margin-right: auto; background-color: whitesmoke;">
-        <h2 align="center">№7</h1>
+        <h2 align="center">№7</h2>
            <h2 align="center"><font color=red>Словарь терминов</font></h2>
                 <h2 align="center"><font color=blue>А Б В</font></h2>
                     <h2 align="center"><font color=brown>А</font></h2>
@@ -68,5 +68,54 @@
                         <p align="center"><a href="https://ru.wikipedia.org/wiki/Байт">Байт</a> - последовательность бит для кодирования одного символа в памяти компьютера</p>
                     <h2 align="center"><font color=brown>В</font></h2>
                         <p align="center"><a href="https://ru.wikipedia.org/wiki/Жёсткий_диск">Винчестер</a> - жесткий диск, HDD</p>
+    </div>
+    <br>
+    <div style="width: 500px; margin-left: auto; margin-right: auto; background-color: whitesmoke;">
+        <h2 align="center">№8</h2>
+        <div style="width: 700px; display: flex;">
+            <ul style="list-style-type: none;">
+            <tr>
+                <li><img src="pc.svg" width="100px" alt="ПК"></li>
+            </tr>
+            </ul>
+            <ul style="list-style-type: none;">
+            <tr>
+                <b>
+                <li style="margin-bottom: -10px;"><p>УТВЕРЖДАЮ</p></li>
+                <li style="margin-bottom: -10px;"><p>Директор</p></li>
+                <li style="margin-bottom: -10px;"><p>____________ И.И.Иванов</p></li>
+                <li style="margin-bottom: -10px;"><p>"__"___________20__г.</p></li>
+            </b>
+            </tr>
+            </ul>   
+        </div>
+        <h3 style="color: crimson; margin-top: 10px;" >Расчетная ведомость на выдачу заработной платы за март 2004 г.</h3>
+    <table style="width: 500px; border-collapse: collapse; border: 1px solid black;" border="1" >
+        <tr bgcolor="#96cbd9" >
+                <th style="color: blue;">Фамилия</th>
+                <th style="color: blue;">Должность</th>
+                <th style="color: blue;">Коэффициент</th>
+                <th style="color: blue;">Начисленная<br> зарплата</th>
+            </tr>
+            <tr bgcolor="#dceff5" style="height: 30px;">
+                <td><a href="ver.html">Веригин</a></td>
+                <td>Инженер</td>
+                <td>12,7</td>
+                <td>152000</td>
+            </tr>
+            <tr bgcolor="#dceff5" style="height: 30px;">
+                <td><a href="lis.html">Лисицина</a></td>
+                <td>Лаборант</td>
+                <td>10,4</td>
+                <td>256000</td>
+            </tr>
+            <tr bgcolor="#dceff5" style="height: 30px;">
+                <td><a href="djig.html">Жигалин</a></td>
+                <td>конструктор</td>
+                <td>13,5</td>
+                <td>137000</td>
+            </tr>
+    </table>
+    </div>
     </body>
 </html>
