--- a/24.hom/index.html
+++ b/24.hom/index.html
@@ -32,13 +32,17 @@
     <br>
     <div style="width: 1500px; margin-left: auto; margin-right: auto; background-color: whitesmoke;">
         <h1 align="center">№4</h1>
+        <P ALIGN=CENTER> <A HREF="#section1"> Сервис Telnet </A> </P>
+        <P ALIGN=CENTER> <A HREF="#section2"> Сервис FTP </A> </P>
+        <P ALIGN=CENTER> <A HREF="#section3"> Сервис E-mail </A> </P>
+
             <H2 ALIGN=CENTER> Сервисы Интернет </Н2>
-            <H2 ALIGN=CENTER> <a href=https://www.telnet.org/htm/howto.htm> Сервис Telnet </a> </Н2>
+            <H2 ALIGN=CENTER id="section1"> Сервис Telnet </Н2>
                 <P> Сервис Telnet позволяет передавать информацию, которая вводится на вашей клавиатуре, другому компьютеру на обработку, а результаты отображать на вашем мониторе. </P>
-            <H2 ALIGN=CENTER> <a href=https://ftpweb.net> Сервис FTP </a> </Н2>
+            <H2 ALIGN=CENTER id="section2">Сервис FTP</Н2>
                 <P> Сервис FTP позволяет получать и передавать файлы по сети. Установив связь
             с удаленным компьютером, пользователь может скопировать файл с удаленного компьютера на свой или скопировать файл со своего компьютера на удаленный. </P>
-            <H2 ALIGN=CENTER> <a href=https://mail.ru> Сервис E-mail </a> </Н2>
+            <H2 ALIGN=CENTER id="section3">Сервис E-mail</Н2>
                 <P> Электронная почта — обмен почтовыми сообщениями с любым абонентом сети Internet. Существует возможность отправки как текстовых, так и двоичных файлов.
             На размер почтового сообщения в сети Internet накладывается следующее ограничение — размер почтового сообщения не должен превышать 64 килобайт. </P>
     </div>
@@ -117,5 +121,9 @@
             </tr>
     </table>
     </div>
+    <br>
+    <div style="width: 500px; margin-left: auto; margin-right: auto; background-color: whitesmoke;">
+        <h2 align="center">№11</h2>
+        <a href="11.html" align="center">11 11 11</a>
     </body>
 </html>
