--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Виталий Пензарь</title>
     <link href="style.css" rel="stylesheet">
     <link href="videoman.svg" rel="website icon" type="svg">
+    <style>
+        a { text-decoration: none; }
+    </style>
 </head>
 <body style="-webkit-text-fill-color: black;">
     <section>
@@ -45,3 +48,4 @@
     </section>
 </body>
 </html>
+
