--- a/24.hom/index.html
+++ b/24.hom/index.html
@@ -26,12 +26,12 @@
         <h1 align="center">№3</h1>
             <ul>
                 <li><a href="file:///Users/vitalij/Desktop/programming/HTML/Sait/index.html">Мой сайт</a></li>
-                <li><a href="https://www.google.ru/?client=safari&channel=mac_bm">google</a></li>
+                <li><a href="#section0">№4</a></li>
             </ul>
     </div>
     <br>
     <div style="width: 1500px; margin-left: auto; margin-right: auto; background-color: whitesmoke;">
-        <h1 align="center">№4</h1>
+        <h1 align="center" id="section0">№4</h1>
         <P ALIGN=CENTER> <A HREF="#section1"> Сервис Telnet </A> </P>
         <P ALIGN=CENTER> <A HREF="#section2"> Сервис FTP </A> </P>
         <P ALIGN=CENTER> <A HREF="#section3"> Сервис E-mail </A> </P>
