--- a/24.hom/index.html
+++ b/24.hom/index.html
@@ -17,7 +17,7 @@
     <br>
     <div style="width: 180px; margin-left: auto; margin-right: auto; background-color: whitesmoke;">
         <h1 align="center">№2</h1>
-            <a href="file:///Users/vitalij/Desktop/programming/HTML/Sait/index.html">
+            <a href="index.html">
                 <img src="sea.jpg" alt="перейти на другую страницу" height="100px" align="center">
             </a>
     </div>
@@ -63,14 +63,16 @@
     <div style="width: 700px; margin-left: auto; margin-right: auto; background-color: whitesmoke;">
         <h2 align="center">№7</h2>
            <h2 align="center"><font color=red>Словарь терминов</font></h2>
-                <h2 align="center"><font color=blue>А Б В</font></h2>
-                    <h2 align="center"><font color=brown>А</font></h2>
+                <h2 align="center"><font color=blue><a href="#section4">А</a>
+                    <a href="#section5">Б</a>
+                    <a href="#section6">В</a></font></h2>
+                    <h2 align="center" id="section4"><font color=brown>А</font></h2>
                         <p align="center"><a href="https://ru.wikipedia.org/wiki/Алгоритм">Алгоритм</a> - последовательное и точное предписание для получения результата</p>
                         <p align="center"><a href="https://ru.wikipedia.org/wiki/Алгол">Алгол</a> - язык программирования</p>
-                    <h2 align="center"><font color=brown>Б</font></h2>
+                    <h2 align="center" id="section5"><font color=brown>Б</font></h2>
                         <p align="center"><a href="https://ru.wikipedia.org/wiki/Бит">Бит</a> - минимальная единица измерения информации. Может принимать значения от 0 до 1</p>
                         <p align="center"><a href="https://ru.wikipedia.org/wiki/Байт">Байт</a> - последовательность бит для кодирования одного символа в памяти компьютера</p>
-                    <h2 align="center"><font color=brown>В</font></h2>
+                    <h2 align="center" id="section6"><font color=brown>В</font></h2>
                         <p align="center"><a href="https://ru.wikipedia.org/wiki/Жёсткий_диск">Винчестер</a> - жесткий диск, HDD</p>
     </div>
     <br>
