--- a/05.02/index.html
+++ b/05.02/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="style.css" rel="stylesheet">
     <style>
-        body {background-image: url(fon.jpg);
+        body {background-image: url(fon\ copy.jpg);
         background-repeat: no-repeat;}
     </style>
 </head>
@@ -40,8 +41,8 @@
         <div class="content-box">
     <h1 id="top" align="center">05.02.2025</h1>
     <ul>
-        <p align="center"><a href="1.html">Задание 1 </a><p>
-        <p align="center"><a href="2.html">Задание 2 </a><pi>
+        <p align="center"><a href="1.html">Задание 1</a></p>
+        <p align="center"><a href="2.html">Задание 2</a></p>
         <p align="center"><a href="3.html">Задание 3</a></p>
         <p align="center"><a href="4.html">Задание 4</a></p>
         <p align="center"><a href="5.html">Задание 5</a></p>
@@ -49,6 +50,8 @@
         <p align="center"><a href="7.html">Задание 7</a></p>
         <p align="center"><a href="8.html">Задание 8</a></p>
         <p align="center"><a href="9.html">Задание 9</a></p>
-        <p align="center"><a href="10.html">Задание 10</a><p>
+        <p align="center"><a href="10.html">Задание 10</a></p>
+    </ul>
+        </div>
 </body>
 </html>
