--- a/05.02/05.12.2025.html
+++ b/05.02/05.12.2025.html
@@ -4,19 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {background-image: url(fon3.jpg);
+        background-repeat: no-repeat;}
+    </style>
 </head>
 <body>
-    <h1 id="top">05.02.2025</h1>
-    <ul>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/3-lesson-05.02/1.html">Задание 1 </a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/3-lesson-05.02/2.html">Задание 2 </a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/3-lesson-05.02/3.html">Задание 3</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/3-lesson-05.02/4.html">Задание 4</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/3-lesson-05.02/5.html">Задание 5</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/3-lesson-05.02/6.html">Задание 6</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/3-lesson-05.02/7.html">Задание 7</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/3-lesson-05.02/8.html">Задание 8</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/3-lesson-05.02/9.html">Задание 9</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/3-lesson-05.02/10.html">Задание 10</a></li>
+    <style>
+        .content-box{
+        padding: 70px; 
+        color: #fff;
+        font-size: 30px;
+        text-transform: uppercase;
+        font-family: Verdana, Tahoma, sans-serif;
+        background: rgba(255, 255, 255, 0,2);
+        border-radius: 16px;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0,1);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border: 1px solid rgba(255, 255, 255, 0,3);
+    }
+    .details {
+        position: relative;
+        display: block;
+        max-width: 650px;
+        max-height: 500px;
+        margin: 0 auto 10px;
+        background: rgba(255, 255, 255, 0.251);/
+        border-radius: 5px;
+        transition: 0.7s;
+        overflow: hidden;
+      }
+    </style>
+        <div class="content-box">
+            <h1 id="top" align="center">05.02.2025</h1>
+        <p align="center"><a href="1.html">Задание 1 </a></p>
+        <p align="center"><a href="2.html">Задание 2 </a></p>
+        <p align="center"><a href="3.html">Задание 3</a></p>
+        <p align="center"><a href="4.html">Задание 4</a></p>
+        <p align="center"><a href="5.html">Задание 5</a></p>
+        <p align="center"><a href="6.html">Задание 6</a></p>
+        <p align="center"><a href="7.html">Задание 7</a></p>
+        <p align="center"><a href="8.html">Задание 8</a></p>
+        <p align="center"><a href="9.html">Задание 9</a></p>
+        <p align="center"><a href="10.html">Задание 10</a></p>
 </body>
 </html>
