--- a/06.02.25/index.html
+++ b/06.02.25/index.html
@@ -5,31 +5,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {background-image: url(fon3.jpg);
+        background-repeat: no-repeat;}
+    </style>
 </head>
 <body>
-    <a href="catalog.html">Регистрация</a>
-    <h1 id="top">Мой сайт</h1>
-    <p>Lorem, ipsum dolor. 
-        <a href="https://github.com/Vitaliy2008">My github</a>
-    </p>
-    <ul>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/2%20урок/04.12.2025.html">04.02.2025</a></li>
-        <li><a href="file:///Users/vitalij/Desktop/programming/HTML/3-lesson-05.02/05.12.2025.html">05.02.2025</a></li>
-        <li><a href="12hom.html">12.02.2025</a></li>
-    </ul>
-    <!-- comment -->
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, ipsa deleniti optio necessitatibus modi alias itaque, velit veritatis fuga, ipsam officia hic in ex! Aut ut nisi officia placeat unde, debitis enim, omnis nobis delectus assumenda dolore distinctio beatae nulla aspernatur! Nostrum doloribus totam recusandae! Sint corporis doloremque ipsum accusantium.</p>
-    <img src="https://i.pinimg.com/originals/77/cb/e1/77cbe186713d04f205f5600e795430b1.jpg" alt="Sea">
-
-    <h1>Регистрация</h1>
-    <form action="#">
-        Ваше имя <input type="text"><br>
-        Пароль <input type="password"> <br>
-        Почта <input type="email"> <br>
-        Дата рождения <input type="date"> <br>
-        <button type="submit">Отправить</button>
-        <button type="reset">Удалить</button>
-    </form>
-    <a href="top">Вверх</a>
+    <style>
+        .content-box{ 
+        padding: 70px;
+        color: #fff;
+        font-size: 30px;
+        text-transform: uppercase;
+        font-family: Verdana, Tahoma, sans-serif;
+        background: rgba(255, 255, 255, 0,2);
+        border-radius: 16px;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0,1);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border: 1px solid rgba(255, 255, 255, 0,3);
+    }
+    .details {
+        position: relative;
+        display: block;
+        max-width: 650px;
+        max-height: 500px;
+        margin: 0 auto 10px;
+        background: rgba(255, 255, 255, 0.251);
+        border-radius: 5px;
+        transition: 0.7s;
+        overflow: hidden;
+      }
+    </style>
+        <div class="content-box">
+    <h1 id="top" align="center">06.02.2025</h1>
+        <p align="center"><a href="1.html">Задание 1</a></p>
+        <p align="center"><a href="2.html">Задание 2</a></p>
+        <p align="center"><a href="3.html">Задание 3</a></p>
+        <p align="center"><a href="4.html">Задание 4</a></p>
+        <p align="center"><a href="5.html">Задание 5</a></p>
+        <p align="center"><a href="6.html">Задание 6</a></p>
+        <p align="center"><a href="7.html">Задание 7</a></p>
+        <p align="center"><a href="8.html">Задание 8</a></p>
+        </div>
 </body>
 </html>
