--- a/12.hom/12hom.html
+++ b/12.hom/12hom.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="style.css" rel="stylesheet">
     <style>
-        body {background-image: url(fon.jpg);
+        body {background-image: url(fon3.jpg);
         background-repeat: no-repeat;}
     </style>
 </head>
@@ -17,7 +16,7 @@
         color: #fff;
         font-size: 30px;
         text-transform: uppercase;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-family: Verdana, Tahoma, sans-serif;
         background: rgba(255, 255, 255, 0,2);
         border-radius: 16px;
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0,1);
