--- a/home04/04.12.2025.html
+++ b/home04/04.12.2025.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body {background-image: url(fon.jpg);
+        body {background-image: url(fon3.jpg);
         background-repeat: no-repeat;}
     </style>
 </head>
