--- a/index.html
+++ b/index.html
@@ -14,19 +14,26 @@
     <section>
         <div class="content-box">
             <h1 align="center">Мой сайт</h1>
-            <details class="details">
+            <details class="details" name="faq">
                 <summary class="details-title">Домашние задания</summary>
+                <div class="details-content">
                 <p align="center"><a href="home04/04.12.2025.html">04.02</a></p>
-                <p align="center"><a href="05.02/index.html">05.02</a></p>
+                <p align="center"><a href="05.02/05.12.2025.html">05.02</a></p>
+                <p align="center"><a href="06.02.25/index.html">06.02</a></p>
                 <p align="center"><a href="12.hom/12hom.html">12.02</a></p>
+                <p align="center"><a href="13.02/les13.html">13.02</a></p>
                 <p align="center"><a href="24.hom/index.html">24.02</a></p>
+            </div>
             </details>
-            <details class="details">
+            <details class="details" name="faq">
                 <summary class="details-title">Lorem</summary>
+                <div class="details-content">
                 <p align="center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime, consequuntur!</p>
+            </div>
             </details>
-            <details class="details">
+            <details class="details" name="faq">
                 <summary class="details-title">Регистрация</summary>
+                <div class="details-content">
                 <form action="#" align="center">
                     Ваше имя <input type="text"><br>
                     Пароль <input type="password"> <br>
@@ -35,14 +42,19 @@
                     <button type="submit">Отправить</button>
                     <button type="reset">Удалить</button>
                 </form>
+            </div>
             </details>
-            <details class="details">
+            <details class="details" name="faq">
                 <summary class="details-title">My GitHub</summary>
+                <div class="details-content">
                 <p align="center"><a href="https://github.com/Vitaliy2008">My github</a></p>
+            </div>
             </details>
-            <details class="details">
+            <details class="details" name="faq">
                 <summary class="details-title">Море</summary>
+                <div class="details-content">
                 <img src="sea.jpg" alt="Sea" height="300" align="center">
+            </div>
             </details>
         </div>
     </section>
