--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
                 <div class="details-content">
                 <p align="center"><a href="home04/04.12.2025.html">04.02</a></p>
                 <p align="center"><a href="05.02/05.12.2025.html">05.02</a></p>
-                <p align="center"><a href="06.02.25/index.html">06.02</a></p>
                 <p align="center"><a href="12.hom/12hom.html">12.02</a></p>
                 <p align="center"><a href="13.02/les13.html">13.02</a></p>
                 <p align="center"><a href="24.hom/index.html">24.02</a></p>
+            </div>
+            </details>
+            <details class="details" name="faq">
+                <summary class="details-title">Классные работы</summary>
+                <div class="details-content">
+                <p align="center"><a href="06.02.25/index.html">06.02</a></p>
+                <p align="center"><a href="13.02/les13.html">13.02</a></p>
+                <p align="center"><a href="28.02/index.html">28.02</a></p>
             </div>
             </details>
             <details class="details" name="faq">
