--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <p align="center"><a href="12.hom/12hom.html">12.02</a></p>
                 <p align="center"><a href="13.02/les13.html">13.02</a></p>
                 <p align="center"><a href="24.hom/index.html">24.02</a></p>
+                <p align="center"><a href="forms/index.html">forms</a></p>
             </div>
             </details>
             <details class="details" name="faq">
