--- a/forms/7.html
+++ b/forms/7.html
@@ -6,6 +6,40 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div style="width: 400px; margin-left: auto; margin-right: auto; background-color: lightgreen;">
+        <h1 align="center">Бланк заказа</h1>
+        <form>
+        <table align="center">
+        <tr>
+            <td>
+                <img src="monitor.svg" style="height: 100px;">
+            </td>
+            <td>
+                <p><input type="text" size="30">-Фамилия</p>
+                <p><input type="text" size="30">-Адрес</p>
+                <p><input type="text" size="30">-Телефон</p>
+            </td>
+        </tr>
+        </table>
+        <h2 align="center">Наши товары</h2>
+        <table align="center">
+            <tr>
+                <td><input type="checkbox"><img src="mouse.svg" style="width: 75px;"></td>
+                <td><input type="checkbox"><img src="keyboard.svg" style="width: 75px;"></td>
+                <td><input type="checkbox"><img src="ssd.svg" style="width: 60px;"></td>
+            </tr>
+        </table>
+        <h2 align="center">Сумма, которой вы располагаете</h2>
+        <table align="center">
+            <tr>
+                <td><input type="radio">$100</td>
+                <td><input type="radio">$500</td>
+                <td><input type="radio">$1000</td>
+            </tr>
+        </table>
+        <p align="center"><input type="submit">
+        <input type="reset"></p>
+        </form>
+    </div>
 </body>
 </html>
