--- a/forms/index.html
+++ b/forms/index.html
@@ -45,6 +45,7 @@
                 <p align="center"><a href="5.html">Задание 5</a></p>
                 <p align="center"><a href="6.html">Задание 6</a></p>
                 <p align="center"><a href="7.html">Задание 7</a></p>
+                <p align="center"><a href="10.html">Задание 10</a></p>
         </div>
 </body>
 </html>
