--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <p align="center"><a href="13.02/les13.html">13.02</a></p>
                 <p align="center"><a href="24.hom/index.html">24.02</a></p>
                 <p align="center"><a href="forms/index.html">forms</a></p>
+                <p align="center"><a href="frames/index.html">frames</a></p>
             </div>
             </details>
             <details class="details" name="faq">
