--- a/Positions/index.html
+++ b/Positions/index.html
@@ -4,48 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {background-image: url(fon2.jpg);
-        background-repeat: no-repeat;}
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <style>
-        .content-box{
-        padding: 70px; 
-        color: #fff;
-        font-size: 30px;
-        text-transform: uppercase;
-        font-family: Verdana, Tahoma, sans-serif;
-        background: rgba(255, 255, 255, 0,2);
-        border-radius: 16px;
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0,1);
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(10px);
-        border: 1px solid rgba(255, 255, 255, 0,3);
-    }
-    .details {
-        position: relative;
-        display: block;
-        max-width: 650px;
-        max-height: 500px;
-        margin: 0 auto 10px;
-        background: rgba(255, 255, 255, 0.251);/
-        border-radius: 5px;
-        transition: 0.7s;
-        overflow: hidden;
-      }
-    </style>
-        <div class="content-box">
-            <h1 id="top" align="center">forms</h1>
-                <p align="center"><a href="1.html">Задание 1 </a></p>
-                <p align="center"><a href="2.html">Задание 2 </a></p>
-                <p align="center"><a href="3.html">Задание 3</a></p>
-                <p align="center"><a href="4.html">Задание 4</a></p>
-                <p align="center"><a href="5.html">Задание 5</a></p>
-                <p align="center"><a href="6.html">Задание 6</a></p>
-                <p align="center"><a href="7.html">Задание 7</a></p>
-                <p align="center"><a href="10.html">Задание 10</a></p>
-        </div>
+    <p>1</p>
+    <img src="img/bear.jpg" class="bear">
+        <p>2</p>
+        <img src="img/cherepaha.jpg">
+            <p class="text"> Картинка </р>
+    <p>3</p>
+    <img src="img/delphin.jpg" class="delphin">
+
+<p>4</p>
+<div style="border: 1px solid black; height: 100px; width: 100px;">
+<img src="img/kaban.jpg" class="kaban">
+    <img src="img/medved.jpg" class="medved">
+    <img src="img/olen.jpg" class="olen">
+    </div>
+<p>5</p>
+<div style=" width: 350px; height: 200px; border: 1px solid #000;">
+    <img src="img/volk.png" class="volk">
+    <img src="img/white bear.jpg" class="wibear">
+    <p class="t"> С Новым<br> Годом!</p>
+</div>
+<p>6</p>
+<div style="border: 1px solid #000; width: 500px; height: 200px;">
+<img src="img/bear.jpg" class="img">
+<p class="t1"><i>Поздравляю!</i></p>
+<p class="t2"><i>Поздравляю!</i></p>
+<p class="t3"><i>Поздравляю!</i></p>
+</div>
+<p>7</p>
+<div style="width: 400px; height: 300px;">
+<img src="img/cherepaha.jpg" class="gold">
+<img src="img/delphin.jpg" class="lec">
+<h4 class="t4"><i>Поздравляю</i></h4>
+<h4 class="t5"><i>с Днем<br> рождения!</i></h4>
+</div>
+<p>8</p>
+<div style="width: 400px; height: 300px; border: 1px solid #000;">
+    <img src="img/kaban.jpg" class="im3">
+    <img src="img/olen.jpg" class="im4">
+    <p class="t6"><b>Воспоминание о лете</b></p>
+</div>
 </body>
 </html>
