--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Виталий Пензарь</title>
     <link href="style.css" rel="stylesheet">
-    <link href="videoman.svg" rel="website icon" type="svg">
+    <link href="cherepaha.jpg" rel="website icon" type="jpg">
     <style>
         a { text-decoration: none; }
     </style>
@@ -17,21 +17,20 @@
             <details class="details" name="faq">
                 <summary class="details-title">Домашние задания</summary>
                 <div class="details-content">
-                <p align="center"><a href="home04/04.12.2025.html">04.02</a></p>
-                <p align="center"><a href="05.02/05.12.2025.html">05.02</a></p>
-                <p align="center"><a href="12.hom/12hom.html">12.02</a></p>
-                <p align="center"><a href="13.02/les13.html">13.02</a></p>
-                <p align="center"><a href="24.hom/index.html">24.02</a></p>
-                <p align="center"><a href="forms/index.html">forms</a></p>
-                <p align="center"><a href="frames/index.html">frames</a></p>
+                <p align="center"><a href="home04/04.12.2025.html">Расписание</a></p>
+                <p align="center"><a href="05.02/05.12.2025.html">Оформление текстов</a></p>
+                <p align="center"><a href="12.hom/12hom.html">Графика в HTML 5</a></p>
+                <p align="center"><a href="24.hom/index.html">Гиперссылки</a></p>
+                <p align="center"><a href="forms/index.html">Формы</a></p>
+                <p align="center"><a href="Positions/index.html">Позиционирование, слои</a></p>
             </div>
             </details>
             <details class="details" name="faq">
                 <summary class="details-title">Классные работы</summary>
                 <div class="details-content">
-                <p align="center"><a href="06.02.25/index.html">06.02</a></p>
-                <p align="center"><a href="13.02/les13.html">13.02</a></p>
-                <p align="center"><a href="28.02/index.html">28.02</a></p>
+                <p align="center"><a href="06.02.25/index.html">Оформление списков</a></p>
+                <p align="center"><a href="13.02/les13.html">Таблицы</a></p>
+                <p align="center"><a href="28.02/index.html">Позиционирование в CSS</a></p>
             </div>
             </details>
             <details class="details" name="faq">
