--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Виталий Пензарь</title>
     <link href="style.css" rel="stylesheet">
-    <link href="cherepaha.jpg" rel="website icon" type="jpg">
+    <link href="cherepaha2.png" rel="website icon" type="png">
     <style>
         a { text-decoration: none; }
     </style>
